21 March 2007

* queue-low and queue-high options. Default queue limit is 2.
* Default maximum-size now 32 MB and maximum now 1 GB.

20 March 2007

* -q option to quiet unnecessary chatter.
* If user/pass is not specified on IMAP or POP3 accounts, attempt to read it
  from the ~/.netrc file.
* Redo child fetch stuff so that exec/pipe matches actually works
* Stop exec/pipe matches early if only checking for regexp and it is found.
* Sprinkle a few fsyncs, and block SIGTERM while writing to mboxes.

18 March 2007

* Informational messages now go to stdout rather than stderr.

16 March 2007

* Change so that the child uses poll(2) on all the fds rather than letting
  the fetch-* stuff poll and periodically checking the parent fd.
* Make delivery children be handled in the main loop (fdm.c) along with
  the fetch children. This means that different accounts will not block each
  other when delivering. I tried allowing multiple simultaneous deliveries
  for each account but it doesn't work very well, particularly regarding
  errors.

15 March 2007

* Seriously reduce -v output in favour of -vv and -vvv.
* Save mail in a queue as it is fetched and perform matching/delivery on it
  while waiting for the server to send the next mail. This can give a 20-50%
  speed increase with some rulesets, particularly with slow POP3 servers.

13 March 2007

* Don't pass stdin to poll(3) instead of closed sockets. Fixes problems with
  rewrite and empty mails on Linux. Reported & tested by Frank Terbeck.

12 March 2007

* The timeout setting is now used for commands too.
* Expand leading ~s into home directories where appropriate.
* Section headings are now numbered in MANUAL.

11 March 2007

* You can't use a va_list twice even when it's passed in as an argument. Duh.
  Fixes segfaults on PPC. Reported by Daniel Wilmer.

08 March 2007

* Try to introduce some consistency into tag replacement in strings. Introduce