@@ -1,3 +1,8 @@
+22 March 2007
+
+* Return total number of mails from start function if possible and print 
+  "X of Y" when reporting mail fetches with -v.
+
 21 March 2007
 
 * queue-low and queue-high options. Default queue limit is 2.
@@ -164,4 +169,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.47 2007-03-21 15:55:55 nicm Exp $
+$Id: CHANGES,v 1.48 2007-03-22 18:44:34 nicm Exp $
